crates/toml/tests/snapshots/invalid/ext/string/no-close-recovery-01.stderr
TOML parse error at line 2, column 2
  |
2 | "
  |  ^
key with no value, expected `=`

---
TOML parse error at line 1, column 6
  |
1 | a = "
  |      ^
invalid basic string, expected `"`

---
TOML parse error at line 2, column 2
  |
2 | "
  |  ^
invalid basic string, expected `"`
